<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">

    <TextView
        android:id="@+id/Logger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="235dp" />

    <Button
        android:id="@+id/RainButt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="playGentleRain"
        android:text="@string/rainbutt_name"
        app:layout_constraintBottom_toTopOf="@+id/WindButt"
        app:layout_constraintEnd_toStartOf="@+id/Rain2Butt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Weather_Volume_Slider" />

    <Button
        android:id="@+id/Rain2Butt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="playIntenseRain"
        android:text="@string/rain2butt_name"
        app:layout_constraintBottom_toTopOf="@+id/Wind2Butt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/RainButt"
        app:layout_constraintTop_toBottomOf="@+id/Weather_Volume_Slider" />

    <Button
        android:id="@+id/WindButt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="playGentleWind"
        android:text="@string/windbutt_name"
        app:layout_constraintBottom_toTopOf="@+id/FireButt"
        app:layout_constraintEnd_toStartOf="@+id/Wind2Butt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RainButt" />

    <Button
        android:id="@+id/Wind2Butt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="playIntenseWind"
        android:text="@string/wind2butt_name"
        app:layout_constraintBottom_toTopOf="@+id/Fire2Butt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/WindButt"
        app:layout_constraintTop_toBottomOf="@+id/Rain2Butt" />

    <Button
        android:id="@+id/FireButt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="playGentleFire"
        android:text="@string/firebutt_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Fire2Butt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WindButt" />

    <Button
        android:id="@+id/Fire2Butt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="playIntenseFire"
        android:text="@string/fire2butt_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/FireButt"
        app:layout_constraintTop_toBottomOf="@+id/Wind2Butt" />

    <SeekBar
        android:id="@+id/Weather_Volume_Slider"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_volume_head" />

    <TextView
        android:id="@+id/weather_volume_head"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/weather_volume_head"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>