<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onEffectsPress"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/LowEnergyButt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:onClick="onGeneralButtPress"
        android:text="@string/lowenergybutt_name"
        app:layout_constraintBottom_toTopOf="@+id/CombatButt"
        app:layout_constraintEnd_toStartOf="@+id/SocialGathButt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SocialGathButt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:onClick="onSocialButtPress"
        android:text="@string/socialgathbutt_name"
        app:layout_constraintBottom_toTopOf="@+id/WeathButt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/LowEnergyButt"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/CombatButt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="onCombatButtPress"
        android:text="@string/combatbutt_name"
        app:layout_constraintBottom_toTopOf="@+id/fxButt"
        app:layout_constraintEnd_toStartOf="@+id/WeathButt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LowEnergyButt" />

    <Button
        android:id="@+id/WeathButt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="onWeatherButtPress"
        android:text="@string/weatherbutt_name"
        app:layout_constraintBottom_toBottomOf="@+id/CombatButt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/CombatButt"
        app:layout_constraintTop_toBottomOf="@+id/SocialGathButt" />

    <Button
        android:id="@+id/fxButt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:onClick="onEffectsPress"
        android:text="@string/fxbutton_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CombatButt" />
</androidx.constraintlayout.widget.ConstraintLayout>